testfx/errors/error_tests/edge_18_python_syntax.fx
// Python 语法
def hello():
    print("Hello")

class Person:
    def __init__(self):
        self.name = "John"

if True:
    pass
elif False:
    pass
